--- a/style.css
+++ b/style.css
@@ -135,7 +135,25 @@ main {
   border-radius: 10px;
   font-family: "Permanent Marker";
   display: flex;
+}
+
+.banner span {
+  font-family: Poppins;
+  color: white;
+  font-size: 60px;
   cursor: pointer;
+  position: absolute;
+  top: 45%;
+  z-index: 4;
+  opacity: 0.4;
+}
+
+.banner span:last-child {
+  right: 0;
+}
+
+.banner:hover span {
+  opacity: 1;
 }
 
 .banner h1 {
@@ -158,6 +176,7 @@ main {
   width: 200px;
   height: 200px;
   transition: 0.3s all ease;
+  object-fit: contain;
 }
 
 .banner img:nth-child(1) {
@@ -194,7 +213,7 @@ main {
   rotate: 20deg;
 }
 
-.banner::after {
+.banner:hover::after {
   content: "A Spin You'll Love";
   color: var(--yellow);
   text-shadow: -3px 3px 0 rgba(0, 0, 0, 1), 1px 1px 0 rgba(0, 0, 0, 1),
